--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "egg-scripts": "^2.11.0",
     "egg-sequelize": "^6.0.0",
     "moment": "^2.29.1",
-    "mysql2": "^2.2.5"
+    "mysql2": "^2.2.5",
+    "nodemailer": "^6.4.18"
   },
   "devDependencies": {
     "autod": "^3.0.1",
